# Vostok-VR-Mod

./: .gitignore  CLAUDE.md  CMakeLists.txt  HANDOVER.md  LICENSE  README.md  THIRD_PARTY.md  build.bat  launch_vr.bat  mod.txt  project.godot
.claude/: settings.local.json
cmake/: CompilerWarnings.cmake  GodotCPP.cmake
config/: action_map.json  default_config.json
config/controller_profiles/: oculus_touch.json  valve_index.json  vive_wand.json  wmr_motion.json
resources/: controls.md  default_config.json  override.cfg  rtv_vr_mod.gdextension  vr_mod_init.gd
resources/vr_mod/: config_io.gd  config_ui.gd  decor.gd  diagnostics.gd  grab.gd  grenade.gd  hands.gd  holster.gd  hud_watch.gd  input.gd  nvg.gd  scope_pip.gd  weapon_sync.gd  xr_rig.gd
scripts/: install.ps1  uninstall.ps1
src/bootstrap/: CMakeLists.txt  command_line_logic.h  command_line_patch.cpp  command_line_patch.h  dllmain.cpp  extension_deployer.cpp  extension_deployer.h  vulkan_hook_installer.cpp  vulkan_hook_installer.h
src/gdextension/: CMakeLists.txt  register_types.cpp  register_types.h
src/gdextension/camera/: camera_override.cpp  camera_override.h  comfort_options.cpp  comfort_options.h  head_tracking.cpp  head_tracking.h
src/gdextension/config/: config_manager.cpp  config_manager.h  config_schema.h
src/gdextension/core/: godot_api_bridge.cpp  godot_api_bridge.h  mod_orchestrator.cpp  mod_orchestrator.h  scene_inspector.cpp  scene_inspector.h
src/gdextension/input/: action_mapper.cpp  action_mapper.h  controller_manager.cpp  controller_manager.h  haptics.cpp  haptics.h  input_profiles.cpp  input_profiles.h
src/gdextension/ui/: hud_anchor.cpp  hud_anchor.h  laser_pointer.cpp  laser_pointer.h  ui_adapter.cpp  ui_adapter.h  virtual_keyboard.cpp  virtual_keyboard.h
src/gdextension/weapons/: recoil_feedback.cpp  recoil_feedback.h  two_hand_grip.cpp  two_hand_grip.h  weapon_detector.cpp  weapon_detector.h  weapon_handler.cpp  weapon_handler.h
src/gdextension/xr_setup/: xr_initializer.cpp  xr_initializer.h  xr_settings.cpp  xr_settings.h
src/injector/: CMakeLists.txt  main.cpp  process_utils.cpp  process_utils.h
src/vulkan_layer/: CMakeLists.txt  hud_reprojector.cpp  hud_reprojector.h  perf_overlay.cpp  perf_overlay.h  vk_dispatch_table.cpp  vk_dispatch_table.h  vk_hooks.cpp  vk_hooks.h
tests/: CMakeLists.txt  README.md  run_all_tests.bat  run_cpp_tests.bat  run_gdscript_tests.bat  run_packaging_tests.bat
tests/cpp/: test_command_line.cpp
tests/gdscript/: run_tests.gd  test_config_io.gd  test_input_routing.gd  test_weapon_cache.gd  test_weapon_slots.gd  test_zone_math.gd
tests/gdscript/lib/: input_routing.gd  test_runner.gd  weapon_cache.gd  weapon_slots.gd  zone_math.gd
tests/packaging/: test_packaging.ps1
